--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -64,7 +64,7 @@
                 @Html.DisplayFor(modelItem => item.Passaword)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Restaurante.Descripcion)
+                @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
