--- a/Views/Menus/Index.cshtml
+++ b/Views/Menus/Index.cshtml
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Precio)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Restaurante.Descripcion)
+                @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
