--- a/Views/Mesas/Index.cshtml
+++ b/Views/Mesas/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Disponibilidad)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Restaurante.Descripcion)
+                @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
