--- a/Views/Reservas/Index.cshtml
+++ b/Views/Reservas/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Cliente.Correo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Restaurante.Descripcion)
+                @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Mesa.Area)
