--- a/Views/Menus/Edit.cshtml
+++ b/Views/Menus/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -20,9 +20,24 @@
             </div>
             <div class="form-group">
                 <label asp-for="Imagen" class="control-label"></label>
-                <input asp-for="Imagen" class="form-control" />
+                
+                <input type="file" id="fileImagen" onchange="mostrarVistaPrevia()" accept="image/*" asp-for="Imagen" class="form-control" />
                 <span asp-validation-for="Imagen" class="text-danger"></span>
             </div>
+
+            <div>
+                @if (Model.Imagen != null && Model.Imagen.Length > 0)
+                {
+                    <!-- Muestra la imagen actual si existe -->
+                    <img class="bloque d mx-auto redondeado" src="data:image/jpg;base64,@(Convert.ToBase64String(Model.Imagen))" width="75" height="75">
+                }
+                else
+                {
+                    <!-- Muestra una imagen predeterminada si no hay imagen actual -->
+                    <img id="imagenPrevia" src="~/img/default.jpg" alt="Vista previa de la imagen" style="max-width: 200px; max-height: 200px;">
+                }
+            </div>
+
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
@@ -56,4 +71,16 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+        function mostrarVistaPrevia() {
+            var input = document.getElementById('fileImagen');
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    document.getElementById('imagenPrevia').src = e.target.result;
+                }
+                reader.readAsDataURL(input.files[0]); // Convierte el archivo a una URL base64
+            }
+        }
+    </script>
 }
