--- a/Views/Restaurantes/Index.cshtml
+++ b/Views/Restaurantes/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Direccion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Empleados.Correo)
+                @Html.DisplayFor(modelItem => item.Empleados.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
