--- a/Views/Menus/Create.cshtml
+++ b/Views/Menus/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
-<h4>Menu</h4>
+<h4>Menú</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -57,7 +57,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Cancelar</a>
 </div>
 
 @section Scripts {
