--- a/Views/Menus/Edit.cshtml
+++ b/Views/Menus/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Menu</h4>
 <hr />
@@ -54,7 +54,7 @@
                 <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RestauranteId" class="control-label"></label>
+                <label asp-for="RestauranteId" class="control-label">Restaurante</label>
                 <select asp-for="RestauranteId" class="form-control" asp-items="ViewBag.RestauranteId"></select>
                 <span asp-validation-for="RestauranteId" class="text-danger"></span>
             </div>
@@ -66,7 +66,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Cancelar</a>
 </div>
 
 @section Scripts {
