--- a/Views/Mesas/Create.cshtml
+++ b/Views/Mesas/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model T_Reservation.Models.Mesa
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
-<h1>Create</h1>
+<h1>Registrar mesa</h1>
 
 <h4>Mesa</h4>
 <hr />
@@ -37,14 +37,14 @@
                 <select asp-for="RestauranteId" class ="form-control" asp-items="ViewBag.RestauranteId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Cancelar</a>
 </div>
 
 @section Scripts {
