--- a/Views/Mesas/Edit.cshtml
+++ b/Views/Mesas/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model T_Reservation.Models.Mesa
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Mesa</h4>
 <hr />
@@ -39,14 +39,14 @@
                 <span asp-validation-for="RestauranteId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Cancelar</a>
 </div>
 
 @section Scripts {
