--- a/Views/Menus/Index.cshtml
+++ b/Views/Menus/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Menú</h1>
 
 <p>
-    <a asp-action="Create">Crear Nuevo</a>
+    <a asp-action="Create" class="btn btn-outline-dark">Crear Nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -60,7 +60,7 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark" >Editar</a>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalles</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-secondary">Detalles</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Eliminar</a>
                     <a asp-action="DeleteImagen" asp-route-id="@item.Id" class="btn btn-outline-danger">Eliminar Imagen</a>
                 </td>
