--- a/Views/Menus/Delete.cshtml
+++ b/Views/Menus/Delete.cshtml
@@ -21,7 +21,10 @@
             @Html.DisplayNameFor(model => model.Imagen)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Imagen)
+            @if (Model.Imagen != null && Model.Imagen.Length > 0)
+            {
+                <img src="data:image/jpg;base64,@(Convert.ToBase64String(Model.Imagen))" style="max-width: 100px; max-height: 100px;" />
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
@@ -52,6 +55,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Cancelar</a>
+        <a asp-action="Index" class="btn btn-outline-dark" >Cancelar</a>
     </form>
 </div>
