--- a/Views/Menus/Details.cshtml
+++ b/Views/Menus/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Detalles</h1>
 
 <div>
-    <h4>Menu</h4>
+    <h4>Menú</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,7 +20,10 @@
             @Html.DisplayNameFor(model => model.Imagen)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Imagen)
+            @if (Model.Imagen != null && Model.Imagen.Length > 0)
+            {
+                <img src="data:image/jpg;base64,@(Convert.ToBase64String(Model.Imagen))" style="max-width: 100px; max-height: 100px;" />
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
@@ -49,6 +52,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
-    <a asp-action="Index">Regresar</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id"></a>
+    <a asp-action="Index" class="btn btn-outline-secondary">Regresar</a>
 </div>
