--- a/Views/Menus/Edit.cshtml
+++ b/Views/Menus/Edit.cshtml
@@ -8,24 +8,23 @@
 
 <h4>Menu</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit" enctype="multipart/form-data">
+
+<form asp-action="Edit" enctype="multipart/form-data" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 <label asp-for="Producto" class="control-label"></label>
                 <input asp-for="Producto" class="form-control" />
                 <span asp-validation-for="Producto" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-7">
                 <label asp-for="Imagen" class="control-label"></label>
                 
                 <input type="file" id="fileImagen" onchange="mostrarVistaPrevia()" accept="image/*" asp-for="Imagen" class="form-control" />
                 <span asp-validation-for="Imagen" class="text-danger"></span>
             </div>
 
-            <div>
+            <div class="col-7">
                 @if (Model.Imagen != null && Model.Imagen.Length > 0)
                 {
                     <!-- Muestra la imagen actual si existe -->
@@ -38,36 +37,36 @@
                 }
             </div>
 
-            <div class="form-group">
+    <div class="form-group col-md-6">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
-            <div class="form-group">
+    <div class="form-group col-md-6">
                 <label asp-for="NotaEspecial" class="control-label"></label>
                 <input asp-for="NotaEspecial" class="form-control" />
                 <span asp-validation-for="NotaEspecial" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-4">
                 <label asp-for="Precio" class="control-label"></label>
                 <input asp-for="Precio" class="form-control" />
                 <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-8">
                 <label asp-for="RestauranteId" class="control-label">Restaurante</label>
                 <select asp-for="RestauranteId" class="form-control" asp-items="ViewBag.RestauranteId"></select>
                 <span asp-validation-for="RestauranteId" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-outline-dark" />
+                <a asp-action="Index" class="btn btn-outline-secondary">Cancelar</a>
+
             </div>
         </form>
-    </div>
-</div>
 
-<div>
-    <a asp-action="Index">Cancelar</a>
-</div>
+<br />
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
