Traduccion de vistas.

--- a/Views/Menus/Details.cshtml
+++ b/Views/Menus/Details.cshtml
@@ -53,5 +53,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id"></a>
-    <a asp-action="Index" class="btn btn-outline-secondary">Regresar</a>
+    <a asp-action="Index" class="btn btn-outline-secondary">Cancelarl</a>
 </div>
