--- a/Views/Clientes/Details.cshtml
+++ b/Views/Clientes/Details.cshtml
@@ -62,5 +62,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
-    <a asp-action="Index">Volver a la lista</a>
+    <a asp-action="Index">Cancelar</a>
 </div>
