--- a/Views/Menus/Index.cshtml
+++ b/Views/Menus/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Menú</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-dark">Crear Nuevo</a>
+    <a asp-action="Create" class="btn btn-outline-dark">Nuevo Menú</a>
 </p>
 <table class="table">
     <thead>
