--- a/Views/Mesas/Index.cshtml
+++ b/Views/Mesas/Index.cshtml
@@ -49,8 +49,8 @@
                 @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> 
+                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> 
                 <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
