--- a/Views/Restaurantes/Create.cshtml
+++ b/Views/Restaurantes/Create.cshtml
@@ -40,15 +40,14 @@
                 <select asp-for="EmpleadoId" class ="form-control" asp-items="ViewBag.EmpleadoId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <input type="submit" value="Crear" class="btn btn-outline-info" />
+            <a asp-action="Index" class="btn btn-outline-dark">cancelar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Cancelar</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
