--- a/Views/Restaurantes/Delete.cshtml
+++ b/Views/Restaurantes/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Eliminar</h1>
 
-<h3>REstas seguro que quieres eliminar este restaurante?</h3>
+<h3>¿Estas seguro que quieres eliminar este restaurante?</h3>
 <div>
     <h4>Restaurante</h4>
     <hr />
@@ -16,6 +16,15 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nombre)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Imagen)
+        </dt>
+        <dd class="col-sm-10">
+            @if (Model.Imagen != null && Model.Imagen.Length > 0)
+            {
+                <img src="data:image/jpg;base64,@(Convert.ToBase64String(Model.Imagen))" style="max-width: 100px; max-height: 100px;" />
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
@@ -39,7 +48,8 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Cancelar</a>
+        <input type="submit" value="Eliminar" class="btn btn-outline-danger" /> |
+     <a asp-action="Index" class="btn btn-outline-dark">Cancelar</a>
+        
     </form>
 </div>
