--- a/Views/Restaurantes/Details.cshtml
+++ b/Views/Restaurantes/Details.cshtml
@@ -16,6 +16,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nombre)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Imagen)
+        </dt>
+        <dd class="col-sm-10">
+            @if (Model.Imagen != null && Model.Imagen.Length > 0)
+            {
+                <img src="data:image/jpg;base64,@(Convert.ToBase64String(Model.Imagen))" style="max-width: 100px; max-height: 100px;" />
+            }
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
@@ -37,6 +46,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Cancelar</a>
+  <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@Model?.Id">Editar</a> |
+ <a asp-action="Index" class="btn btn-outline-dark">Cancelar</a>
 </div>
