--- a/Views/Restaurantes/Index.cshtml
+++ b/Views/Restaurantes/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Restaurante</h1>
 
 <p>
-    <a asp-action="Create">Nuvo Restaurante</a>
+   <a asp-action="Create" class="btn btn-outline-secondary">Crear nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -53,9 +53,10 @@
                 @Html.DisplayFor(modelItem => item.Empleados.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> 
-                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> 
-                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+             <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" class="btn btn-outline-info" asp-route-id="@item.Id">Detalles</a> |
+                <a asp-action="Delete" class="btn btn-outline-danger" asp-route-id="@item.Id">Eliminar</a>
+              
             </td>
         </tr>
 }
