Editar vistas reservación y traducir texto

--- a/Views/Reservas/Edit.cshtml
+++ b/Views/Reservas/Edit.cshtml
@@ -4,56 +4,60 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
+<h1>Editar Reservas</h1>
 
-<h4>Reserva</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+<div class="container">
+    <form asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="Id" />
+
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <label asp-for="ClienteId" class="form-label">Cliente:</label>
+                <select asp-for="ClienteId" class="form-select" asp-items="ViewBag.ClienteId"></select>
                 <span asp-validation-for="ClienteId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="RestauranteId" class="control-label"></label>
-                <select asp-for="RestauranteId" class="form-control" asp-items="ViewBag.RestauranteId"></select>
+            <div class="col-md-4">
+                <label asp-for="RestauranteId" class="form-label">Restaurante:</label>
+                <select asp-for="RestauranteId" class="form-select" asp-items="ViewBag.RestauranteId"></select>
                 <span asp-validation-for="RestauranteId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="MesaId" class="control-label"></label>
-                <select asp-for="MesaId" class="form-control" asp-items="ViewBag.MesaId"></select>
+            <div class="col-md-4">
+                <label asp-for="MesaId" class="form-label">Mesa:</label>
+                <select asp-for="MesaId" class="form-select" asp-items="ViewBag.MesaId"></select>
                 <span asp-validation-for="MesaId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CantidadPersonas" class="control-label"></label>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <label asp-for="CantidadPersonas" class="form-label">Cantidad de Personas:</label>
                 <input asp-for="CantidadPersonas" class="form-control" />
                 <span asp-validation-for="CantidadPersonas" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FechaInicio" class="control-label"></label>
+            <div class="col-md-4">
+                <label asp-for="FechaInicio" class="form-label">Fecha de Inicio:</label>
                 <input asp-for="FechaInicio" class="form-control" />
                 <span asp-validation-for="FechaInicio" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FechaFin" class="control-label"></label>
+            <div class="col-md-4">
+                <label asp-for="FechaFin" class="form-label">Fecha de Fin:</label>
                 <input asp-for="FechaFin" class="form-control" />
                 <span asp-validation-for="FechaFin" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+        </div>
 
-<div>
-    <a asp-action="Index">Cancelar</a>
+        <div class="d-flex justify-content-end">
+            <button type="submit" class="btn btn-outline-dark">Guardar</button>
+            <div style="width: 15px"></div>
+            <a asp-action="Index" class="btn btn-secondary ml-3">Cancelar</a>
+        </div>
+    </form>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
