--- a/Views/Reservas/Delete.cshtml
+++ b/Views/Reservas/Delete.cshtml
@@ -4,54 +4,64 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Eliminar</h1>
+<h1>Eliminar Reserva</h1>
 
-<h3>Esta seguro de quiere eliminar esta reservacion?</h3>
-<div>
-    <h4>Reserva</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cliente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.Correo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Restaurante)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Restaurante.Descripcion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Mesa)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Mesa.Area)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CantidadPersonas)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CantidadPersonas)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaInicio)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaInicio)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaFin)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaFin)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Eliminar</a>
-    </form>
+<div class="container">
+    <div class="card border-secundary mb-3">
+        <div class="card-body">
+            <h3>¿Está Seguro Que Desea Eliminar Esta Reserva?</h3>
+            <hr />
+            <dl class="row">
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.Cliente)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.Cliente.Correo)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.Restaurante)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.Restaurante.Descripcion)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.Mesa)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.Mesa.Area)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.CantidadPersonas)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.CantidadPersonas)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.FechaInicio)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.FechaInicio)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.FechaFin)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.FechaFin)
+                </dd>
+            </dl>
+        </div>
+        <div class="card-footer d-flex justify-content-end">
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <button type="submit" class="btn btn-outline-danger me-3">Eliminar</button>
+            </form>
+            <a asp-action="Index" class="btn btn-outline-secondary">Regresar</a>
+        </div>
+    </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
