--- a/Views/Reservas/Details.cshtml
+++ b/Views/Reservas/Details.cshtml
@@ -4,51 +4,62 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Detalle</h1>
+<h1>Detalle de Reserva</h1>
 
-<div>
-    <h4>Reserva</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cliente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.Correo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Restaurante)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Restaurante.Descripcion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Mesa)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Mesa.Area)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CantidadPersonas)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CantidadPersonas)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaInicio)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaInicio)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaFin)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaFin)
-        </dd>
-    </dl>
+<div class="container">
+    <div class="card border-secundary mb-3">
+        <div class="card-body"><h4>Información de la Reserva</h4></div>
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.ClienteId)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.Cliente.Correo)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.RestauranteId)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.Restaurante.Descripcion)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.MesaId)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.Mesa.Area)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.CantidadPersonas)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.CantidadPersonas)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.FechaInicio)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.FechaInicio)
+                </dd>
+                <dt class="col-md-4">
+                    @Html.DisplayNameFor(model => model.FechaFin)
+                </dt>
+                <dd class="col-md-8">
+                    @Html.DisplayFor(model => model.FechaFin)
+                </dd>
+            </dl>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-end">
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-outline-dark">Editar</a>
+        <div style="width: 15px"></div>
+        <a asp-action="Index" class="btn btn-outline-secondary">Cancelar</a>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Cancelar</a>
-</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
