--- a/Views/Mesas/Create.cshtml
+++ b/Views/Mesas/Create.cshtml
@@ -6,45 +6,45 @@
 
 <h1>Registrar mesa</h1>
 
-<h4>Mesa</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <div class="col-md-12">
+        <form asp-action="Create" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="col-md-4">
                 <label asp-for="Numero" class="control-label"></label>
                 <input asp-for="Numero" class="form-control" />
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="col-md-4">
                 <label asp-for="Capacidad" class="control-label"></label>
                 <input asp-for="Capacidad" class="form-control" />
                 <span asp-validation-for="Capacidad" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="col-md-4">
                 <label asp-for="Area" class="control-label"></label>
                 <input asp-for="Area" class="form-control" />
                 <span asp-validation-for="Area" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="col-md-4">
                 <label asp-for="Disponibilidad" class="control-label"></label>
                 <input asp-for="Disponibilidad" class="form-control" />
                 <span asp-validation-for="Disponibilidad" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="col-md-4">
                 <label asp-for="RestauranteId" class="control-label"></label>
                 <select asp-for="RestauranteId" class ="form-control" asp-items="ViewBag.RestauranteId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
+                <input class="btn btn-outline-secondary" type="submit" value="Crear" />
+                <a class="btn btn-outline-danger" asp-action="Index">Cancelar</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Cancelar</a>
+    
 </div>
 
 @section Scripts {
