Se añadio fondo

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/T_Reservation.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="bg-image" style="background-image: url('https://static.vecteezy.com/system/resources/previews/015/805/854/non_2x/eco-friendly-cutlery-seamless-pattern-knife-fork-spoon-eco-kitchen-cutlery-vector.jpg');">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 navbar-dark" style="background-color: #000000;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 navbar-dark bg-body">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">T-Reservation</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -52,9 +52,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer>
         <div class="container">
-            &copy; 2024 - T-Reservation
+            &copy; 2024 T-Reservation
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
