--- a/Views/Mesas/Edit.cshtml
+++ b/Views/Mesas/Edit.cshtml
@@ -3,10 +3,9 @@
 @{
     ViewData["Title"] = "Editar";
 }
-
-<h1>Modificar mesa</h1>
-
-<hr />
+<div class="card">
+    <div class="card-body">
+<h1 class="card-title">Modificar mesa</h1>
 <div class="row">
     <div class="col-md-12">
         <form asp-action="Edit" class="row g-3">
@@ -45,10 +44,9 @@
     </div>
 </div>
 
-<div>
-    
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+    </div>
+</div>
+
