--- a/Views/Mesas/Index.cshtml
+++ b/Views/Mesas/Index.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Mesas";
 }
 
-<h1>Registro de mesas</h1>
+<div class="card">
+    <div class="card-body">
+<h1 class="card-title">Registro de mesas</h1>
 
 <p>
     <a class="btn btn-outline-secondary" asp-action="Create">Agreagar mesa</a>
@@ -58,4 +60,6 @@
 }
     </tbody>
 </table>
+</div>
+</div>
 </div>
