--- a/Views/Mesas/Delete.cshtml
+++ b/Views/Mesas/Delete.cshtml
@@ -47,8 +47,8 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input class="btn btn-outline-danger" type="submit" value="Eliminar"/> 
-        <a class="btn btn-outline-danger" asp-action="Index">Cancelar</a>
+        <input class="btn btn-danger" type="submit" value="Eliminar"/> 
+        <a class="btn btn-danger" asp-action="Index">Cancelar</a>
     </form>
 </div>
     </div>
