--- a/Views/Mesas/Details.cshtml
+++ b/Views/Mesas/Details.cshtml
@@ -42,8 +42,8 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-outline-secondary" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> 
-    <a class="btn btn-outline-danger" asp-action="Index">Cancelar</a>
+    <a class="btn btn-secondary" asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> 
+    <a class="btn btn-danger" asp-action="Index">Cancelar</a>
 </div>
     </div>
 </div>
