--- a/Views/Mesas/Index.cshtml
+++ b/Views/Mesas/Index.cshtml
@@ -9,7 +9,7 @@
 <h1 class="card-title">Registro de mesas</h1>
 
 <p>
-    <a class="btn btn-outline-secondary" asp-action="Create">Agreagar mesa</a>
+    <a class="btn btn-secondary" asp-action="Create">Agreagar mesa</a>
 </p>
 <div class="table-responsive">
     <table class="table table-bordered table-sm">
@@ -52,9 +52,9 @@
                 @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
             </td>
             <td>
-                        <a class="mb3 btn btn-outline-secondary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
-                        <a class="mb3 btn btn-outline-secondary" asp-action="Details" asp-route-id="@item.Id">Detalles</a>
-                        <a class="mb3 btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                        <a class="mb3 btn btn-secondary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                        <a class="mb3 btn btn-secondary" asp-action="Details" asp-route-id="@item.Id">Detalles</a>
+                        <a class="mb3 btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
