--- a/Views/Mesas/Create.cshtml
+++ b/Views/Mesas/Create.cshtml
@@ -36,8 +36,8 @@
                 <select asp-for="RestauranteId" class ="form-control" asp-items="ViewBag.RestauranteId"></select>
             </div>
             <div class="form-group">
-                <input class="btn btn-outline-secondary" type="submit" value="Crear" />
-                <a class="btn btn-outline-danger" asp-action="Index">Cancelar</a>
+                <input class="btn btn-secondary" type="submit" value="Crear" />
+                <a class="btn btn-danger" asp-action="Index">Cancelar</a>
             </div>
         </form>
     </div>
