--- a/Views/Mesas/Edit.cshtml
+++ b/Views/Mesas/Edit.cshtml
@@ -37,8 +37,8 @@
                 <span asp-validation-for="RestauranteId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input class="btn btn-outline-secondary" type="submit" value="Guardar" />
-                <a class="btn btn-outline-danger" asp-action="Index">Cancelar</a>
+                <input class="btn btn-secondary" type="submit" value="Guardar" />
+                <a class="btn btn-danger" asp-action="Index">Cancelar</a>
             </div>
         </form>
     </div>
