--- a/Views/Empleados/Delete.cshtml
+++ b/Views/Empleados/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Elimar</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Estás seguro de querer eliminar esto?</h3>
 <div>
     <h4>Empleado</h4>
     <hr />
@@ -63,7 +63,10 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Cancelar</a>
+        <button type="submit" class="btn btn-outline-danger me-3">Eliminar</button> |
+        <a asp-action="Index" class="btn btn-outline-secondary">Regresar a la lista</a>
     </form>
 </div>
+
+
+
