--- a/Views/Empleados/Details.cshtml
+++ b/Views/Empleados/Details.cshtml
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
-    <a asp-action="Index">Cancelar</a>
+    <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@Model?.Id">Editar</a>|
+    <a asp-action="Index" class="btn btn-outline-info">Cancelar</a>
 </div>
