--- a/Views/Empleados/Edit.cshtml
+++ b/Views/Empleados/Edit.cshtml
@@ -54,14 +54,14 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-outline-info" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Cancelar</a>
+    <a asp-action="Index" class="btn btn-outline-dark">cancelar</a>
 </div>
 
 @section Scripts {
