--- a/Views/Empleados/Index.cshtml
+++ b/Views/Empleados/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Empleados</h1>
 
 <p>
-    <a asp-action="Create">Crear nuevo empleado</a>
+    <a asp-action="Create" class="btn btn-outline-success">Crear nuevo empleado</a>
 </p>
 <table class="table">
     <thead>
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> 
-                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> 
-                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-secondary">Detalles</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Eliminar</a>
             </td>
         </tr>
 }
