--- a/Views/Clientes/Delete.cshtml
+++ b/Views/Clientes/Delete.cshtml
@@ -1,14 +1,15 @@
 ﻿@model T_Reservation.Models.Cliente
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Cliente";
 }
 
-<h1>Eliminar</h1>
+<div class="card">
+    <div class="card-body">
+<h1 class="card-title">Eliminar cliente</h1>
 
-<h6 class="text-success">¿Estas suguro que quieres eliminar el elemento?</h6>
+<h6 class="text-danger">¿Esta seguro que quiere eliminar el elemento?</h6>
 <div>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
@@ -62,7 +63,9 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Eliminar" class="btn btn-outline-danger" /> 
-        <a class="btn btn-outline-danger" asp-action="Index">Cancelar</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> 
+        <a class="btn btn-secondary" asp-action="Index">Cancelar</a>
     </form>
+</div>
+    </div>
 </div>
