--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -1,10 +1,12 @@
 ﻿@model T_Reservation.Models.Cliente
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
+<div class="card">
+    <div class="card-body">
 
-<h1>Modificar cliente.</h1>
+<h1 class="card-title">Modificar cliente</h1>
 <div class="row">
     <div class="col-md-12">
         <form asp-action="Edit" class="row g-3">
@@ -51,8 +53,8 @@
                 <span asp-validation-for="RestauranteId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-outline-secondary" />
-                <a class="btn btn-outline-danger" asp-action="Index">Cancelar</a>
+                <input type="submit" value="Guardar" class="btn btn-secondary" />
+                <a class="btn btn-danger" asp-action="Index">Cancelar</a>
             </div>
         </form>
     </div>
@@ -62,3 +64,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+    </div>
+</div>
