--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -1,13 +1,15 @@
 ﻿@model IEnumerable<T_Reservation.Models.Cliente>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Cliente";
 }
 
-<h1>Registro de cliente</h1>
+<div class="card">
+    <div class="card-body">
+<h1 class="card-title">Registro de cliente</h1>
 
 <p>
-    <a class="btn btn-outline-secondary" asp-action="Create">Crear nuevo cliente</a>
+    <a class="btn btn-secondary" asp-action="Create">Crear nuevo cliente</a>
 </p>
 <div class="table-responsive">
     <table class="table table-bordered table-sm">
@@ -68,12 +70,14 @@
                 @Html.DisplayFor(modelItem => item.Restaurante.Nombre)
             </td>
             <td>
-                        <a class="mb3 btn btn-outline-secondary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
-                        <a class="mb3 btn btn-outline-secondary" asp-action="Details" asp-route-id="@item.Id">Detalle</a>
-                        <a class="mb3 btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                        <a class="mb3 btn btn-secondary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                        <a class="mb3 btn btn-secondary" asp-action="Details" asp-route-id="@item.Id">Detalle</a>
+                        <a class="mb3 btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+</div>
+</div>
 </div>
