Catalogo de Menú para clientes, aplicación de cards.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Empleados" asp-action="Index">Empleados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Menus" asp-action="Index">Menus</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoMenu">Catalogo de Menú</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Menus" asp-action="Index">Menú</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Mesas" asp-action="Index">Mesas</a>
