Se creo el catalogo de restaurante.

--- a/Views/Restaurantes/Index.cshtml
+++ b/Views/Restaurantes/Index.cshtml
@@ -9,9 +9,9 @@
 <p>
    <a asp-action="Create" class="btn btn-outline-secondary">Crear nuevo</a>
 </p>
-<table class="table">
+<table class="table table-bordered table-sm">
     <thead>
-        <tr>
+        <tr class="table-dark">
             <th>
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
