--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoRestaurante">Catalogo Restaurante</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes</a>
                         </li>
                         <li class="nav-item">
