--- a/Views/Empleados/Index.cshtml
+++ b/Views/Empleados/Index.cshtml
@@ -3,15 +3,16 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Empleados</h1>
+<div class="card">
+    <div class="card-body">
+<h1 class="card-title">Empleados</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-success">Crear nuevo empleado</a>
+    <a asp-action="Create" class="btn btn-secondary">Crear nuevo empleado</a>
 </p>
-<table class="table">
+<table class="table table-bordered table-sm">
     <thead>
-        <tr>
+  <tr class="table-dark">
             <th>
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
@@ -67,11 +68,13 @@
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-secondary">Detalles</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Eliminar</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-secondary">Editar</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+</div>
+</div>
