--- a/Views/Reservas/Index.cshtml
+++ b/Views/Reservas/Index.cshtml
@@ -3,15 +3,17 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Reservaciones</h1>
+<div class="card">
+    <div class="card-body">
+        <h1 class="card-title">Reservaciones</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-dark">Nueva Reserva</a>
+    <a asp-action="Create" class="btn btn-secondary">Nueva Reserva</a>
 </p>
-<table class="table">
+        <div class="table-responsive">
+            <table class="table table-bordered table-sm">
     <thead>
-        <tr>
+        <tr class="table-dark">
             <th>
                 @Html.DisplayNameFor(model => model.Cliente)
             </th>
@@ -55,11 +57,14 @@
                 @Html.DisplayFor(modelItem => item.FechaFin)
             </td>
             <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-secondary">Detalles</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Eliminar</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-secondary">Editar</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+</div>
+</div>
+</div>
