--- a/Views/Restaurantes/Index.cshtml
+++ b/Views/Restaurantes/Index.cshtml
@@ -3,12 +3,14 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Restaurante</h1>
+<div class="card">
+    <div class="card-body">
+<h1 class="card-title">Restaurante</h1>
 
 <p>
-   <a asp-action="Create" class="btn btn-outline-secondary">Crear nuevo</a>
+    <a asp-action="Create" class="btn btn-secondary">Agregar nuevo restaurante</a>
 </p>
+     
 <table class="table table-bordered table-sm">
     <thead>
         <tr class="table-dark">
@@ -53,12 +55,13 @@
                 @Html.DisplayFor(modelItem => item.Empleados.Nombre)
             </td>
             <td>
-             <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" class="btn btn-outline-info" asp-route-id="@item.Id">Detalles</a> |
-                <a asp-action="Delete" class="btn btn-outline-danger" asp-route-id="@item.Id">Eliminar</a>
-              
+                  <a asp-action="Edit" class="mb3 btn btn-secondary" asp-route-id="@item.Id">Editar</a>
+                  <a asp-action="Details" class="mb3 btn btn-secondary" asp-route-id="@item.Id">Detalles</a> 
+                 <a asp-action="Delete" class="mb3 btn btn-danger" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+</div>
+</div>
